--- a/todoList.html
+++ b/todoList.html
@@ -17,7 +17,8 @@
        
         <h1>To do List</h1>
         <ul>
-            <li id="special"><input type="checkbox">Homework</li>
+            <!--  to do an checkbox already checked, put "checked"-->
+            <li id="special"><input type="checkbox" checked>Homework</li>
             <li class="completed"><input type="checkbox">Buy Groceries</li>
             <li class="completed"><input type="checkbox">Clean the house</li>
         </ul>
