--- a/textandfonts.html
+++ b/textandfonts.html
@@ -3,6 +3,7 @@
     <head>
         <title>Fonts</title>
         <link rel="stylesheet" type="text/css" href="textandfont.css">
+        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Dancing+Script:wght@600&family=Indie+Flower&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>Fonts Demo Page</h1>
@@ -10,7 +11,8 @@
         <p>Pabst selvage yr cornhole.<!-- "span is a way to group text together without make it visible "--> <span>Pork belly</span> freegan kitsch pug organic, chicharrones wayfarers raw denim fam keffiyeh cold-pressed trust fund intelligentsia la croix. Stumptown irony offal YOLO knausgaard tilde direct trade meggings. Godard bespoke etsy bitters PBR&B readymade. Plaid tattooed PBR&B, twee hoodie succulents shoreditch. Flexitarian +1 leggings kale chips lomo PBR&B fingerstache crucifix la croix.</p>
         <p id="second">Crucifix food truck kickstarter jianbing twee PBR&B. Leggings tofu neutra biodiesel mlkshk, scenester four dollar toast iPhone waistcoat hexagon pabst tumblr prism cornhole. Iceland williamsburg messenger bag art party schlitz listicle retro thundercats pork belly austin keffiyeh church-key flexitarian cornhole. Air plant tacos poke kale chips taiyaki leggings gastropub paleo small batch trust fund offal brooklyn kogi. Cardigan skateboard glossier twee, seitan authentic la croix cornhole paleo keffiyeh direct trade hashtag.</p>
 
-
+        <h1 id="different">Another part of fonts - Google fonts</h1>
+        <p id=gfonts>This is how to use the "fonts.google.com" and bring new styles to your text</p>
 
     </body>
 </html>
