tic tac toe exercise

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -5,25 +5,26 @@
         <link rel="stylesheet"  type="text/css" href="tictactoe.css">
     </head>
     <body>
+    <div>
         <h1>Tic Tac Toe</h1>
         <table>
             <tr>
                 <td></td>
-                <td class="middle"></td>
+                <td class="vertical"></td>
                 <td></td>
             </tr>
             <tr>
-                <td class="lateral"></td>
-                <td id="middle"></td>
-                <td class="lateral"></td>
+                <td class="horizontal"></td>
+                <td class="middle"></td>
+                <td class="horizontal"></td>
             </tr>
             <tr>
                 <td></td>
-                <td class="middle"></td>
+                <td class="vertical"></td>
                 <td></td>
             </tr>
         </table>
-
+    </div>
 
     </body>
 </html>
