--- a/tictactoe.html
+++ b/tictactoe.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet"  type="text/css" href="tictactoe.css">
     </head>
     <body>
-    <div>
         <h1>Tic Tac Toe</h1>
         <table>
             <tr>
@@ -15,7 +14,7 @@
             </tr>
             <tr>
                 <td class="horizontal"></td>
-                <td class="middle"></td>
+                <td class="vertical horizontal"></td>
                 <td class="horizontal"></td>
             </tr>
             <tr>
@@ -24,7 +23,6 @@
                 <td></td>
             </tr>
         </table>
-    </div>
 
     </body>
 </html>
