finish the blog - details edited

--- a/blog.html
+++ b/blog.html
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My blog</title>
-        <link rel="stylesheet" type="text/css" href="blog.css">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <p class="date">November 23 2015</p>
-        <h1>This Is My First Article</h1>
-        <p class="first">
-            Hot chicken actually twee, helvetica keffiyeh banjo chillwave pitchfork. Semiotics palo santo offal stumptown man bun portland sriracha. Lomo pinterest truffaut, intelligentsia live-edge beard polaroid gluten-free tofu +1. Hexagon poke biodiesel DIY. Drinking vinegar heirloom fingerstache, truffaut church-key humblebrag street art.
-        </p>
-        <p>    
-            Taiyaki hammock hot chicken sriracha. Skateboard pinterest stumptown iceland. Meh twee put a bird on it meggings dreamcatcher thundercats tbh crucifix migas williamsburg activated charcoal. Offal affogato biodiesel brunch unicorn shaman fanny pack, chia single-origin coffee tumblr portland vape. Post-ironic semiotics blue bottle plaid, twee echo park copper mug banjo.
-        </p>
-        <p>
-            Raclette hella everyday carry vaporware marfa enamel pin cardigan. Kinfolk chillwave biodiesel normcore cardigan iceland schlitz austin four loko. Bitters blog migas brunch. Bicycle rights twee dreamcatcher mixtape, bespoke tattooed taiyaki VHS glossier occupy hexagon. XOXO heirloom banjo cornhole af chambray kitsch lumbersexual.
-        </p>
-
-        <hr>
-
-        <p class="date">December 11 2015</p>
-
-        <h1>This Is Another Article</h1>
-
-        <p class="first">
-            Cardigan chia glossier brooklyn forage palo santo edison bulb ramps taiyaki woke you probably haven't heard of them. Direct trade coloring book VHS narwhal viral echo park put a bird on it live-edge fanny pack tofu small batch. Stumptown hella typewriter, tattooed coloring book before they sold out mustache cred kitsch bushwick paleo. Subway tile tattooed deep v shabby chic iceland meditation shaman copper mug la croix beard cred. Neutra cold-pressed cronut paleo you probably haven't heard of them readymade semiotics health goth iPhone thundercats normcore schlitz fam pabst hexagon. Succulents wolf gluten-free narwhal pork belly post-ironic.
-        </p>
-        <p>
-            Iceland enamel pin pickled, succulents truffaut ethical hexagon intelligentsia fixie gentrify sriracha authentic actually. Sustainable offal butcher chillwave stumptown truffaut forage letterpress pitchfork art party health goth pok pok bespoke. YOLO flannel migas disrupt man braid poutine pitchfork hell of umami before they sold out truffaut kitsch shaman tumblr. Man bun selvage tilde tote bag, godard cloud bread everyday carry listicle live-edge taiyaki raw denim hoodie synth kinfolk air plant. +1 kitsch keffiyeh, austin hoodie poke squid selfies brunch whatever 90's. Organic ennui street art fixie.
-        </p>
-        <p>
-            Tattooed lomo pop-up intelligentsia. Vegan godard trust fund knausgaard poutine, deep v sustainable cloud bread hexagon health goth freegan try-hard hammock pabst green juice. Migas vaporware kombucha vape coloring book pop-up franzen post-ironic trust fund four dollar toast ennui pickled. Vape keffiyeh offal cred hexagon four loko butcher normcore snackwave la croix. Ugh succulents direct trade irony. Ethical knausgaard butcher chambray stumptown cold-pressed.
-        </p>
-
-
-
-
-    </body>
+<head>
+    <title>My blog</title>
+    <link rel="stylesheet" type="text/css" href="blog.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
+</head>
+<body>
+<div>
+    <p class="date">November 23 2015</p>
+    <h1>This Is My First Article</h1>
+    <p class="first">
+        Hot chicken actually twee, helvetica keffiyeh banjo chillwave pitchfork. Semiotics palo santo offal stumptown man bun portland sriracha. Lomo pinterest truffaut, intelligentsia live-edge beard polaroid gluten-free tofu +1. Hexagon poke biodiesel DIY. Drinking vinegar heirloom fingerstache, truffaut church-key humblebrag street art.
+    </p>
+    <p>    
+        Taiyaki hammock hot chicken sriracha. Skateboard pinterest stumptown iceland. Meh twee put a bird on it meggings dreamcatcher thundercats tbh crucifix migas williamsburg activated charcoal. Offal affogato biodiesel brunch unicorn shaman fanny pack, chia single-origin coffee tumblr portland vape. Post-ironic semiotics blue bottle plaid, twee echo park copper mug banjo.
+    </p>
+    <p>
+        Raclette hella everyday carry vaporware marfa enamel pin cardigan. Kinfolk chillwave biodiesel normcore cardigan iceland schlitz austin four loko. Bitters blog migas brunch. Bicycle rights twee dreamcatcher mixtape, bespoke tattooed taiyaki VHS glossier occupy hexagon. XOXO heirloom banjo cornhole af chambray kitsch lumbersexual.
+    </p>
+</div>
+    <hr>
+<div>
+    <p class="date">December 11 2015</p>
+    <h1>This Is Another Article</h1>
+    <p class="first">
+        Cardigan chia glossier brooklyn forage palo santo edison bulb ramps taiyaki woke you probably haven't heard of them. Direct trade coloring book VHS narwhal viral echo park put a bird on it live-edge fanny pack tofu small batch. Stumptown hella typewriter, tattooed coloring book before they sold out mustache cred kitsch bushwick paleo. Subway tile tattooed deep v shabby chic iceland meditation shaman copper mug la croix beard cred. Neutra cold-pressed cronut paleo you probably haven't heard of them readymade semiotics health goth iPhone thundercats normcore schlitz fam pabst hexagon. Succulents wolf gluten-free narwhal pork belly post-ironic.
+    </p>
+    <p>
+        Iceland enamel pin pickled, succulents truffaut ethical hexagon intelligentsia fixie gentrify sriracha authentic actually. Sustainable offal butcher chillwave stumptown truffaut forage letterpress pitchfork art party health goth pok pok bespoke. YOLO flannel migas disrupt man braid poutine pitchfork hell of umami before they sold out truffaut kitsch shaman tumblr. Man bun selvage tilde tote bag, godard cloud bread everyday carry listicle live-edge taiyaki raw denim hoodie synth kinfolk air plant. +1 kitsch keffiyeh, austin hoodie poke squid selfies brunch whatever 90's. Organic ennui street art fixie.
+    </p>
+    <p>
+        Tattooed lomo pop-up intelligentsia. Vegan godard trust fund knausgaard poutine, deep v sustainable cloud bread hexagon health goth freegan try-hard hammock pabst green juice. Migas vaporware kombucha vape coloring book pop-up franzen post-ironic trust fund four dollar toast ennui pickled. Vape keffiyeh offal cred hexagon four loko butcher normcore snackwave la croix. Ugh succulents direct trade irony. Ethical knausgaard butcher chambray stumptown cold-pressed.
+    </p>
+</div>
+</body>
 </html>
