--- a/transparenceopacity.html
+++ b/transparenceopacity.html
@@ -5,10 +5,45 @@
         <link rel="stylesheet" type="text/css" href="transparencyopacity.css">
     </head>
     <body>
-        <section>
+        <h2>Transparency</h2>
+        <section class="one">
             <div id="rgba">
-
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde illum, ut, praesentium natus quo doloremque suscipit culpa accusantium voluptate ad laudantium. Officiis, obcaecati dolorem. Tempora, modi? Dolor animi reprehenderit magni.
             </div>
         </section>
+        <h2>Opacity</h2>
+        <section class="one">
+            <div id="opacity">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde illum, ut, praesentium natus quo doloremque suscipit culpa accusantium voluptate ad laudantium. Officiis, obcaecati dolorem. Tempora, modi? Dolor animi reprehenderit magni.
+            </div>
+        </section>
+        <h2>Position</h2>
+        <section id="static">
+            <h3>static</h3>
+            <div class="div"></div>
+            <div class="div" id="middle"></div>
+            <div class="div"></div>
+        </section>
+        <section id="relative">
+            <h3>Relative</h3>
+            <div class="div"></div>
+            <div class="div" id="middle"></div>
+            <div class="div"></div>
+        </section>
+        <section id="absolute">
+            <h3>Absolute</h3>
+            <div class="div"></div>
+            <div class="div" id="middle"></div>
+            <div class="div"></div>
+        </section>
+        <section id="fixed">
+            <h3>Fixed</h3>
+            <div class="div"></div>
+            <div class="div" id="middle"></div>
+            <div class="div"></div>
+        </section>
+
+
+
     </body>
 </html>
